Fix remaining hovering effect on mobile after closing the nav

--- a/style.css
+++ b/style.css
@@ -326,12 +326,18 @@ and (max-width : 820px) {
     position: sticky;
   }
 
-  body:has(#menu-toggle:checked) label[for="menu-toggle"], label[for="menu-toggle"]:hover {
+  body:has(#menu-toggle:checked) label[for="menu-toggle"] {
     background-color: #14263e;
   }
-
-  body:has(#menu-toggle:checked) label[for="menu-toggle"]:hover {
-    background-color: #14263ee1;
+  
+  @media (hover: hover) {
+    label[for="menu-toggle"]:hover {
+      background-color: #14263e;
+    }
+    
+    body:has(#menu-toggle:checked) label[for="menu-toggle"]:hover {
+      background-color: #14263ee1;
+    }
   }
 
   body:has(#menu-toggle:checked) header {
